--- a/gemma_rag.ipynb
+++ b/gemma_rag.ipynb
@@ -992,7 +992,7 @@
               "      --disabled-fill-color: #AAA;\n",
               "      --disabled-bg-color: #DDD;\n",
               "  }\n",
-              "\n",
+              "\n", g
               "  [theme=dark] .colab-df-quickchart {\n",
               "      --bg-color: #3B4455;\n",
               "      --fill-color: #D2E3FC;\n",
@@ -2357,7 +2357,7 @@
       "source": [
         "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
         "\n",
-        "tokenizer = AutoTokenizer.from_pretrained(\"google/gemma-2b-it\", use_auth_token=\"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\")\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"google/gemma-2b-it\")\n",
         "# CPU Enabled uncomment below 👇🏽\n",
         "# model = AutoModelForCausalLM.from_pretrained(\"google/gemma-2b-it\")\n",
         "# GPU Enabled use below 👇🏽\n",
